<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_view"
    android:padding="@dimen/_10sdp">

    <com.mpcl.custom.BoldTextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_task"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tint="@color/orange"
        android:src="@drawable/ic_add"
        android:rotation="45"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.mpcl.custom.RegularEditText
        android:id="@+id/etTask"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/edittext_background"
        android:gravity="start"
        android:hint="@string/Notes"
        android:padding="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/card_view_gray"
        android:drawablePadding="@dimen/_5sdp"
        android:drawableTint="@color/blue_btn_bg_color"
        android:gravity="center|start"
        android:padding="@dimen/_5sdp"
        android:text="@string/today"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/tvTime"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTask"
        app:drawableStartCompat="@drawable/calendar_scheduled" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:background="@drawable/card_view_gray"
        android:drawableStart="@drawable/ic_clock"
        android:drawablePadding="@dimen/_5sdp"
        android:drawableTint="@color/blue_btn_bg_color"
        android:gravity="center|start"
        android:padding="@dimen/_5sdp"
        android:text="@string/time"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvDate"
        app:layout_constraintTop_toBottomOf="@+id/etTask" />

    <com.mpcl.custom.RegularButton
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:backgroundTint="@color/colorPrimary"
        android:drawableRight="@drawable/ic_arrow_forward"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/tvDate" />


</androidx.constraintlayout.widget.ConstraintLayout>